--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -29,18 +29,59 @@ body {
   margin: 33px;
 }
 
-p {
+th {
+  padding-bottom: 5px;
+}
+
+p, td {
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px;
   margin: 33px;
 }
 
-a {
-  color: #666;
+tr {
+  position: relative;
+}
+
+th {
+  padding-bottom: 5px;
+}
+
+td {
+  padding: 0 5px 7px 5px;
+}
+
+a:link {
+  color: #000;
+}
+
+a:visited {
+  color: #666
 }
 
 a:hover {
   color: #fff;
   background-color: #000
+}
+
+h2 {
+  margin: 16px 0;
+}
+
+.new-book {
+  background-color: #fff;
+  color: #333;
+  font-family: verdana, arial, helvetica, sans-serif;
+  font-size: 13px;
+  line-height: 18px;
+  margin: 0;
+}
+
+.field {
+  margin-bottom: 10px;
+}
+
+input[type="submit" i] {
+  padding: 1px 6px;
 }
