--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,2 +1,35 @@
-<h1>Books#index</h1>
-<p>Find me in app/views/books/index.html.erb</p>
+<body>
+  <h1>Books</h1>
+  <table>
+      <thead>
+        <tr>
+          <th>Title</th>
+          <th>Body</th>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
+    <% @books.each do |book| %>
+      <tbody>
+        <tr>
+          <td><%= book.title %></td>
+          <td><%= book.body %></td>
+          <td><%= link_to "Show",book_path(book.id) %></td>
+          <td><%= link_to "Edit",edit_book_path(book.id) %></td>
+          <td><%= link_to "Destroy",destroy_book_path(book.id), method: :delete, "data-confirm" => "Are you sure?" %></td>
+        </tr>
+      </tbody>
+    <% end %>
+  </table>
+</body>
+<h2>New book</h2>
+<%= form_with model:@book, local:true do |f| %>
+  <div class="field">
+    <p class="new-book">Title</p>
+    <%= f.text_field :title %>
+  </div>
+  <div class="field">
+  <p class="new-book">Body</p>
+  <%= f.text_area :body %>
+  </div>
+  <br><%= f.submit 'Create Book' %></br>
+<% end %>
