--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -23,6 +23,18 @@
 </body>
 <h2>New book</h2>
 <%= form_with model:@book, local:true do |f| %>
+  <% if @book.errors.any? %>
+  <div class="alert alert-danger" role="alert">
+  <div id="error_explanation">
+    <h3><%= pluralize(@book.errors.count, "error") %> prohibited this obj from being saved:</h3>
+    <ul>
+      <% @book.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  </div>
+  </div>
+<% end %>
   <div class="field">
     <p class="new-book">Title</p>
     <%= f.text_field :title %>
