--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -22,11 +22,10 @@
   </table>
 </body>
 <h2>New book</h2>
-<%= form_with model:@book, local:true do |f| %>
-  <% if @book.errors.any? %>
+<% if @book.errors.any? %>
   <div class="alert alert-danger" role="alert">
   <div id="error_explanation">
-    <h3><%= pluralize(@book.errors.count, "error") %> prohibited this obj from being saved:</h3>
+    <h3><%= pluralize(@book.errors.count, "error") %> prohibited this book from being saved:</h3>
     <ul>
       <% @book.errors.full_messages.each do |message| %>
         <li><%= message %></li>
@@ -35,6 +34,7 @@
   </div>
   </div>
 <% end %>
+<%= form_with model:@book, local:true do |f| %>
   <div class="field">
     <p class="new-book">Title</p>
     <%= f.text_field :title %>
