--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,7 +17,6 @@
 
 * {
   margin: 0;
-  padding: 0;
   box-sizing: border-box;
 }
 
@@ -46,7 +45,7 @@ tr {
 }
 
 td {
-  padding: 0 5px 7px 5px;
+  padding: 1px 5px 7px 5px;
 }
 
 a:link {
@@ -54,12 +53,12 @@ a:link {
 }
 
 a:visited {
-  color: #666
+  color: #666;
 }
 
 a:hover {
   color: #fff;
-  background-color: #000
+  background-color: #000;
 }
 
 h1 {
@@ -67,7 +66,7 @@ h1 {
 }
 
 h2 {
-  margin: 16px 0;
+  margin: 16.185px 0;
 }
 
 .new-book,.edit-book {
