--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -8,8 +8,8 @@
           <th colspan="3"></th>
         </tr>
       </thead>
-    <% @books.each do |book| %>
-      <tbody>
+    <tbody>
+      <% @books.each do |book| %>
         <tr>
           <td><%= book.title %></td>
           <td><%= book.body %></td>
@@ -17,8 +17,8 @@
           <td><%= link_to "Edit",edit_book_path(book.id) %></td>
           <td><%= link_to "Destroy",destroy_book_path(book.id), method: :delete, "data-confirm" => "Are you sure?" %></td>
         </tr>
-      </tbody>
-    <% end %>
+      <% end %>
+    </tbody>
   </table>
 </body>
 <h2>New book</h2>
@@ -43,5 +43,5 @@
   <p class="new-book">Body</p>
   <%= f.text_area :body %>
   </div>
-  <br><%= f.submit 'Create Book' %></br>
+  <%= f.submit 'Create Book' %>
 <% end %>
