--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,16 +1,29 @@
 <h1>Editing Book</h1>
 
+<% if @book.errors.any? %>
+  <div id="error_explanation">
+  <div class="alert alert-danger" role="alert">
+    <h2><%= pluralize(@book.errors.count, "error") %> prohibited this book from being saved:</h2>
+    <ul>
+      <% @book.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  </div>
+  </div>
+<% end %>
+
 <%= form_with model:@book, local: true do |f| %>
   <div class="field">
-    <p class="edit-book">Title</p>
+    <%= f.label(:title, "Title") %>
     <%= f.text_field :title %>
   </div>
   <div class="field">
-    <p class="edit-book">Body</p>
+    <%= f.label(:body, "Body") %>
     <%= f.text_area :body %>
   </div>
   <div class="field"><%= f.submit 'Update Book' %></div>
 <% end %>
 <%= link_to "Show",book_path(@book) %>
 |
-<%= link_to "Back",books_path(@book) %>
+<%= link_to "Back",books_path %>
