--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,5 @@
 <body>
+  <p class="notice"><%= notice %></p>
   <h1>Books</h1>
   <table>
       <thead>
@@ -23,9 +24,9 @@
 </body>
 <h2>New book</h2>
 <% if @book.errors.any? %>
-  <div class="alert alert-danger" role="alert">
   <div id="error_explanation">
-    <h3><%= pluralize(@book.errors.count, "error") %> prohibited this book from being saved:</h3>
+  <div class="alert alert-danger" role="alert">
+    <h2><%= pluralize(@book.errors.count, "error") %> prohibited this book from being saved:</h2>
     <ul>
       <% @book.errors.full_messages.each do |message| %>
         <li><%= message %></li>
@@ -36,12 +37,12 @@
 <% end %>
 <%= form_with model:@book, local:true do |f| %>
   <div class="field">
-    <p class="new-book">Title</p>
+    <%= f.label(:title, "Title") %>
     <%= f.text_field :title %>
   </div>
   <div class="field">
-  <p class="new-book">Body</p>
-  <%= f.text_area :body %>
+    <%= f.label(:body, "Body") %>
+    <%= f.text_area :body %>
   </div>
   <%= f.submit 'Create Book' %>
 <% end %>
